# mongorest

./: .gitignore  Pipfile  README.md  api.md  datamodel.json  mongorest.conf  pyproject.toml  requirements.txt  test_dev.py  wsgi.py
deploy/: nginx.conf
mongorest/: app.py  fake_employees.py  junkinserts.py  mongodb.py  sqlitedb.py  todo.db
mongorest/static/: api.yaml
mongorest/static/css/: main.css  swagger-ui.css
mongorest/templates/: api.html  base.html  index.html  navigation.html
tests/: test_app.py
