[tool.poetry]
name = "mongorest"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pymongo = "^4.6.3"
faker = "^24.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
